# WebVO

./: .gitignore  Groups_PR12.00_114  Grupos_RP12.001551131367  Pipfile  README.md  fofdb.db  fofsequencialn2.cpp  fofserial  pyproject.toml  requirements.txt
experiment/: forms.py  tasks.py  urls.py  views.py
fof/: __init__.py  admin.py  apps.py  forms.py  models.py  tasks.py  urls.py  views.py
fof/migrations/: 0001_initial.py  0002_auto_20181219_1232.py  0003_auto_20181219_1233.py
fofexperiments/inputs/: README.md  particulas
image/: __init__.py  admin.py  apps.py  forms.py  models.py  tasks.py  urls.py  views.py
image/migrations/: 0001_initial.py
modelo_padrao_v2/js/: functions.js
resulttable/: __init__.py  admin.py  apps.py  models.py  urls.py  views.py
resulttable/migrations/: 0001_initial.py  0002_execution_algorithm.py  0003_execution_logfile.py  0004_auto_20190225_2153.py  0005_auto_20190225_2154.py
static/algorithm/: FoF0n2.cpp  a.out  exec
static/ui/: index.php  instrucoes.html  menu.php  rodape-governo.php  topo.php
templates/: FoF.html  about.html  base.html  contact.html  experiments.html  footer.html  forms.html  head_css.html  home.html  image.html  javascript.html  navbar.html  wavelet.html  welcome.html
templates/fof/: FoF.html  about.html
templates/registration/: activate.html  activation_complete.html  activation_email.txt  activation_email_subject.txt  login.html  registration_form.html  (+1 more)
webfriends/: __init__.py  admin.py  apps.py  celery.py  celery_tasks.py  forms.py  models.py  regbackend.py  settings.py  urls.py  views.py
(+47 files in other folders)
